# Engine

./: CMakeLists.txt
Core/: CMakeLists.txt
Core/includes/EngineCore/: application.hpp
Core/includes/EngineCore/Utils/: test.hpp
Core/src/EngineCore/: application.cpp
Core/src/EngineCore/Utils/: test.cpp
Editor/: CMakeLists.txt
Editor/src/: main.cpp
